--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,11 @@ a:hover{
 
 .contenedor-principal{
     display: flex;
-    width: 80%;
     align-self: center;
     align-items: center;
+    justify-content: space-between;
     gap: 2rem;
+    width: 100%;
 }
 
 .contenedor-texto{
@@ -117,7 +118,7 @@ a:hover{
     height: 30rem;
 }
 
-@media (max-width: 768px){
+@media (max-width: 1100px){
     
     header .contenedor-principal{
         width: 100%;
@@ -179,7 +180,8 @@ a:hover{
 }
 
 #skill .contenedor-principal{
-    justify-content: space-between;    
+    justify-content: center;    
+    gap: 6rem;
 }
 
 .contenedor-tarjeta{
@@ -197,7 +199,7 @@ a:hover{
 
 .contenedor-tarjeta:hover{
     outline: 0.5rem solid var(--resaltar);
-    fill: red;
+    fill: var(--resaltar);
 
 }
 
@@ -224,7 +226,8 @@ a:hover{
 }
 
 #hobbie .contenedor-principal{
-    justify-content: space-between;    
+    justify-content: center;  
+    gap: 6rem;  
 }
 
 /* Formacion Academica */
@@ -264,9 +267,28 @@ a:hover{
     color: var(--blanco);
 }
 
+@media (max-width: 1365px){
+    #formacion .contenedor-tarjeta{
+        max-width: 25rem;
+        max-height: 25rem;
+    }
+
+    #formacion h4{
+        font-size: 1rem;
+    }
+
+    #formacion h3{
+        font-size: 1.2rem;
+    }
+}
+
 /* Formacion Profecional */
 #proyecto h2{
     text-align: center;
+}
+
+#proyecto img{
+    width: 100%;
 }
 
 #proyecto .contenedor-proyecto-info h2, h3{
@@ -286,22 +308,15 @@ a:hover{
     flex-direction: row-reverse;
 }
 
-.contenedor-demo{
-    width: 100rem;
-    height: 60rem; 
+.contenedor-proyecto-info{
+    width: 40%;
 }
-
-.contenedor-demo iframe{
-    width: 100%;
-    height: 100%;
-}
-
 
 #proyecto button{
     cursor: pointer;
     background-color: transparent;
     margin-right: 1rem;
-    width: 20rem;
+    width: 30%;
     height: 3rem;
     border: 0.2rem solid var(--resaltar);
     color: var(--blanco);
@@ -315,7 +330,7 @@ a:hover{
    border: 0.2rem solid var(--resaltar);
 }
 
-@media (max-width: 768px){
+@media (max-width: 1100px){
     .contenedor-proyecto, .contenedor-proyecto:nth-child(2n+1){
         flex-direction: column;
     }
@@ -350,6 +365,10 @@ a:hover{
         flex-direction: column;
         align-items: center;
     }
+
+    #proyecto button{
+        width: 100%;
+    }
 }
 
 /* Contacto*/
@@ -358,15 +377,15 @@ a:hover{
 }
 
 .contenedor-imagen{
-    width: 60rem;
-    height: 70rem;
-    margin: 0 auto;
 }
 
-.contenedor-imagen img{
-    max-width: 100%;
-    max-height: 100%;
+.contenedor-imagen img{  
+    min-width: 100%;
     margin-top: 2rem;
+}
+
+.contenedor-formulario{
+    width: 100%;
 }
 
 .formulario-contacto{
@@ -383,7 +402,6 @@ a:hover{
     font-size: 1.3rem;
     flex-direction: column;
     background-color: var(--primario);
-    min-width: 80rem;
     color: darkgray;
     padding: 0.8rem 0.8rem;
     margin-bottom: 1rem;
@@ -431,7 +449,7 @@ a:hover{
 
 }
 
-@media (max-width: 768px){
+@media (max-width: 1108px){
     #contacto .contenedor-imagen{
         display: none;
     }
