--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ html{
 body{
     font-size: 1.5rem;
     color: var(--blanco);
+    font-family: 'Source Code Pro', monospace;
 }
 
 a{
@@ -255,7 +256,13 @@ a:hover{
 
 #formacion h3{
     margin: 1rem 0;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+#formacion h4{
+    margin: 1rem 0;
+    font-size: 1rem;
     font-weight: bold;
 }
 
