--- a/css/Contacto/contactoresponsive.css
+++ b/css/Contacto/contactoresponsive.css
@@ -1,5 +1,5 @@
 @media (max-width: 1108px){
-    #contacto .contenedor-imagen{
+    #contacto .contenedor__imagen{
         display: none;
     }
 
@@ -13,7 +13,7 @@
         min-width: 20rem;
     }
 
-    .label-contacto{
+    .contacto__label{
         min-width: 100%;
     }
 }
