--- a/css/Header/headerResponsive.css
+++ b/css/Header/headerResponsive.css
@@ -1,10 +1,10 @@
 @media (max-width: 1100px){
     
-    header .contenedor-principal{
+    header .contenedor__principal{
         width: 100%;
     }
 
-    .contenedor-menu, .contenedor-menu ul{
+    .contenedor__menu, .contenedor__menu ul{
         text-align: center;
     }
 
@@ -12,28 +12,28 @@
         padding: 0;
     }
 
-    .contenedor-principal{
+    .contenedor__principal{
         flex-direction: column;
     }
 
-    .contenedor-texto{
+    .contenedor__texto{
         flex-direction: column;
         min-width: auto;
     }
 
-    .contenedor-menu ul li:not(:last-child){
+    .contenedor__menu ul li:not(:last-child){
         display: none;
     }
 
-    .contenedor-redes ul{
+    .contenedor__redes ul{
         gap: 1rem;
     }
 
-    .contenedor-redes{
+    .contenedor__redes{
         align-self: center;
     }
 
-    #foto-perfil{
+    #foto__perfil{
         align-self: center;
     }
 }
