--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,12 @@ a:hover{
     background: transparent;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus {
+    -webkit-box-shadow: 0 0 0px 1000px var(--primario) inset;
+}
+
+input:-webkit-autofill {
+    -webkit-text-fill-color: var(--blanco);
+}
