--- a/css/FormacionProfesional/formacionprofesional.css
+++ b/css/FormacionProfesional/formacionprofesional.css
@@ -1,17 +1,18 @@
-#proyecto h2{
+#proyecto h2 {
     text-align: center;
 }
 
-#proyecto img{
-    width: 100%;
+#proyecto img {
+    max-width: 50rem;
 }
 
-#proyecto .contenedor__proyecto__info h2, h3{
+#proyecto .contenedor__proyecto__info h2,
+h3 {
     text-align: left;
     margin: 2rem 0;
 }
 
-.contenedor__proyecto{
+.contenedor__proyecto {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,15 +20,12 @@
     margin-top: 4rem;
 }
 
-.contenedor__proyecto:nth-child(2n+1){
-    flex-direction: row-reverse;
-}
 
-.contenedor__proyecto-info{
+.contenedor__proyecto-info {
     width: 40%;
 }
 
-#proyecto button{
+#proyecto button {
     cursor: pointer;
     background-color: transparent;
     margin-right: 1rem;
@@ -40,7 +38,96 @@
 }
 
 
-#proyecto button:hover{  
-   background-color: var(--resaltar);
-   border: 0.2rem solid var(--resaltar);
+#proyecto button:hover {
+    background-color: var(--resaltar);
+    border: 0.2rem solid var(--resaltar);
 }
+
+
+
+/* Slide */
+.slideshow-container {
+    max-width: 1000px;
+    margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    position: relative;
+    top: -20rem;
+    cursor: pointer;
+    width: auto;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+
+  .prev{
+    float: left;
+    left: -5rem;
+  }
+
+  .next {
+    float: right;
+    right: -5rem;
+    border-radius: 3px 0 0 3px;
+  }
+    
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
