--- a/css/FormacionProfesional/formacionprofesional.css
+++ b/css/FormacionProfesional/formacionprofesional.css
@@ -21,9 +21,12 @@ h3 {
 }
 
 
-.contenedor__proyecto-info {
-    width: 40%;
+.contenedor__proyecto__info h2{
+    font-size: var(--subTitulo);
+    min-width: 30rem;
 }
+
+
 
 #proyecto button {
     cursor: pointer;
@@ -59,13 +62,13 @@ h3 {
   /* Next & previous buttons */
   .prev, .next {
     position: relative;
-    top: -20rem;
+    top: -20.5rem;
     cursor: pointer;
     width: auto;
-    padding: 16px;
+    padding: 1.6rem;
     color: white;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1.8rem;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -75,34 +78,13 @@ h3 {
 
   .prev{
     float: left;
-    left: -5rem;
+    left: -8rem;
   }
 
   .next {
     float: right;
-    right: -5rem;
+    right: -8rem;
     border-radius: 3px 0 0 3px;
-  }
-    
-  
-  /* Caption text */
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
   }
   
   /* The dots/bullets/indicators */
