--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,19 @@
     --blanco: #ffffff;
     --resaltar: lightseagreen;
     --invalid: lightcoral;
+
+    --tituloSize: 3.5rem;
+    --subTitulo: 2rem;
+    --subTituloChico: 1.4rem;
+    --textoSize: 1.8rem;
+    --textoChico: 1rem;
+
+    --tituloRespon: 1.9rem;
+    --subTituloRespon: 1.6rem;
+    --subTituloChicoRespon: 1.2rem;
+    --textoRespon: 1.3rem;
+    --textoChicoRespon: .9rem;
+
 }
 
 html{
@@ -33,8 +46,24 @@ h1, h2, .contenedor-redes{
     margin: 3rem 0;
 }
 
-h2{
-    font-size: 4rem;
+.titulo{
+    font-size: var(--tituloSize);
+}
+
+.subTitulo{
+    font-size: var(--subTitulo);
+}
+
+.subTituloChico{
+    font-size: var(--subTituloChico);
+}
+
+.texto{
+    font-size: var(--textoSize);
+}
+
+.textoChico{
+    font-size: var(--textoChico);
 }
 
 a:hover{
@@ -73,4 +102,28 @@ input:-webkit-autofill:focus {
 
 input:-webkit-autofill {
     -webkit-text-fill-color: var(--blanco);
+}
+
+
+@media (max-width: 1100px){
+    .titulo{
+        font-size: var(--tituloRespon);
+    }
+    
+    .subTitulo{
+        font-size: var(--subTituloRespon);
+    } 
+
+    .subTituloChico{
+        font-size: var(--subTituloChicoRespon);
+    }
+    
+    .texto{
+        font-size: var(--textoRespon);
+    }
+    
+    .textoChico{
+        font-size: var(--textoChicoRespon);
+    }
+    
 }
