--- a/css/Header/headerResponsive.css
+++ b/css/Header/headerResponsive.css
@@ -19,6 +19,7 @@
 
     .contenedor__principal{
         flex-direction: column-reverse;
+        align-items: center;
     }
 
     .contenedor__texto{
