--- a/css/FormacionProfesional/formacionprofesionalresponsive.css
+++ b/css/FormacionProfesional/formacionprofesionalresponsive.css
@@ -7,6 +7,10 @@
         gap: 0;
     }
 
+    .contenedor__proyecto__botonera{
+        flex-direction: column;
+    }
+
     .contenedor__demo{
         width: 30rem;
         height: 20rem; 
