--- a/css/Header/header.css
+++ b/css/Header/header.css
@@ -27,7 +27,7 @@
 .contenedor__principal{
     display: flex;
     align-self: center;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 2rem;
     width: 100%;
@@ -93,6 +93,7 @@
 
 .menu__link{
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: .3rem;
 }
@@ -106,6 +107,7 @@
     border: .2rem solid var(--resaltar);
     opacity: 80%;
     background: var(--primario);
+    z-index: 1;
 }
 
 @keyframes cartoontocommon {
