--- a/css/Hobbies/hobbie.css
+++ b/css/Hobbies/hobbie.css
@@ -6,3 +6,22 @@
     justify-content: center;  
     gap: 6rem;  
 }
+
+#hobbie .contenedor__tarjeta{
+    min-width: 20rem;
+    min-height: 20rem; 
+}
+
+@media (min-width: 1700px){
+    #hobbie .contenedor__tarjeta{
+        min-width: 25rem;
+        min-height: 25rem;
+    }
+}
+
+@media (max-width: 1100px){
+    #hobbie .contenedor__tarjeta{
+        min-width: 25rem;
+        min-height: 25rem;
+    }
+}
