--- a/css/Skills/skill.css
+++ b/css/Skills/skill.css
@@ -7,17 +7,10 @@
     gap: 6rem;
 }
 
-.contenedor__tarjeta{
-    width: 25rem;
-    height: 25rem;
+#skill .contenedor__tarjeta{
+    min-width: 16rem;
+    min-height: 16rem;
     background-color: var(--blanco);
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: 200ms ease-out all;
-
 }
 
 .contenedor__tarjeta:hover{
@@ -37,7 +30,20 @@
 
 .contenedor__tarjeta p{
     color: var(--primario);
-    font-size: 2rem;
     font-weight: bold;
     cursor: default;
+}
+
+@media (min-width: 1700px){
+    #skill .contenedor__tarjeta{
+        min-width: 25rem;
+        min-height: 25rem;
+    }
+}
+
+@media (max-width: 1100px){
+    #skill .contenedor__tarjeta{
+        min-width: 25rem;
+        min-height: 25rem;
+    }
 }
