--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,25 @@ a{
     text-decoration: none;
     color: black;
     color: var(--blanco);
+    max-width: 25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1, h2, .contenedor-redes{
     margin: 3rem 0;
+}
+
+.contenedor__tarjeta{
+    background-color: var(--blanco);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: 200ms ease-out all;
+    text-align: center;
 }
 
 .titulo{
